<resources>
    <string name="application_name" translatable="false">AIGC Cloud Demo</string>
    <string name="join" translatable="false">Join</string>
    <string name="leave" translatable="false">Leave</string>
    <string name="input_language" translatable="false">Input Language</string>
    <string name="out_language" translatable="false">Out Language</string>
    <string name="Chinese" translatable="false">Chinese</string>
    <string name="English" translatable="false">English</string>
    <string name="region" translatable="false">Region</string>
    <string name="stt_mode" translatable="false">STT Mode</string>
    <string name="tts_mode" translatable="false">TTS Mode</string>
    <string name="mode_quick" translatable="false">Quick</string>
    <string name="mode_normal" translatable="false">Normal</string>
    <string name="tts_mode_ali_cosy" translatable="false">ali_cosy</string>
    <string name="tts_mode_ali_tts" translatable="false">ali_tts</string>
    <string name="channel_id" translatable="false">Channel Id:%1$s</string>
    <string name="app_id" translatable="false">APP ID</string>
    <string name="app_id_open" translatable="false">对外</string>
    <string name="app_id_internal" translatable="false">内部测试</string>
    <string name="channel_id_label" translatable="false">Channel ID</string>


</resources>