<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/application_name"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/region_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/region"
        app:layout_constraintBottom_toBottomOf="@id/region_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/region_spinner" />

    <Spinner
        android:id="@+id/region_spinner"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#E5E5E5"
        android:spinnerMode="dropdown"
        app:layout_constraintLeft_toRightOf="@id/region_tv"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/in_language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/input_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/region_tv" />

    <CheckBox
        android:id="@+id/in_chinese_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chinese"
        app:layout_constraintStart_toEndOf="@id/in_language_tv"
        app:layout_constraintTop_toBottomOf="@id/region_tv" />

    <CheckBox
        android:id="@+id/in_english_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/English"
        app:layout_constraintStart_toEndOf="@id/in_chinese_cb"
        app:layout_constraintTop_toBottomOf="@id/region_tv" />

    <TextView
        android:id="@+id/out_language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/out_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/in_language_tv" />

    <CheckBox
        android:id="@+id/out_chinese_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Chinese"
        app:layout_constraintStart_toEndOf="@id/out_language_tv"
        app:layout_constraintTop_toBottomOf="@id/in_language_tv" />

    <CheckBox
        android:id="@+id/out_english_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/English"
        app:layout_constraintStart_toEndOf="@id/out_chinese_cb"
        app:layout_constraintTop_toBottomOf="@id/in_language_tv" />

    <Button
        android:id="@+id/join_room_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/join"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/out_language_tv" />


    <TextView
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>